kube/deploy/core/ingress/ingress-nginx/app/default-backend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "default-error-page-${DNS_SHORT//./-}"
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "${DNS_SHORT_CF}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: &host "error.${DNS_SHORT}"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: default-backend
            port:
              number: 80
  tls:
  - hosts:
    - *host
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "default-error-page-${DNS_MAIN//./-}"
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "${DNS_MAIN_CF}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: &host "error.${DNS_MAIN}"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: default-backend
            port:
              number: 80
  tls:
  - hosts:
    - *host
